--- a/about.html
+++ b/about.html
@@ -281,7 +281,7 @@ $(document).ready(function () {
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="index.html">Home</a>
+  <a href="stuff.html">Stuff</a>
 </li>
 <li>
   <a href="about.html">About</a>
