--- a/about.html
+++ b/about.html
@@ -303,7 +303,12 @@ $(document).ready(function () {
 </div>
 
 
-<p>More about this website.</p>
+<div id="lucy-zhang" class="section level2">
+<h2>Lucy Zhang</h2>
+<p>PhD Candidate<br />
+Department of Human Genetics<br />
+McGill University</p>
+</div>
 
 
 
