--- a/10T.html
+++ b/10T.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Homepage</title>
+<title>10T</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -25,6 +25,13 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
+<script src="site_libs/htmlwidgets-1.5.2/htmlwidgets.js"></script>
+<script src="site_libs/plotly-binding-4.9.2.1/plotly.js"></script>
+<script src="site_libs/typedarray-0.1/typedarray.min.js"></script>
+<link href="site_libs/crosstalk-1.1.0.1/css/crosstalk.css" rel="stylesheet" />
+<script src="site_libs/crosstalk-1.1.0.1/js/crosstalk.min.js"></script>
+<link href="site_libs/plotly-htmlwidgets-css-1.52.2/plotly-htmlwidgets.css" rel="stylesheet" />
+<script src="site_libs/plotly-main-1.52.2/plotly-latest.min.js"></script>
 
 <style type="text/css">
   code{white-space: pre-wrap;}
@@ -374,43 +381,15 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Homepage</h1>
+<h1 class="title toc-ignore">10T</h1>
 
 </div>
 
 
-<div id="tabs" class="section level1 tabset">
-<h1>Tabs</h1>
-<div id="tab1" class="section level2">
-<h2>Tab1</h2>
-<p>Things 1</p>
-</div>
-<div id="tab2" class="section level2 tabset">
-<h2>Tab2</h2>
-<p>Things2</p>
-<div id="nested-tabs" class="section level3">
-<h3>Nested Tabs</h3>
-<p>One nested tab</p>
-</div>
-<div id="nested-tabs-1" class="section level3">
-<h3>Nested Tabs</h3>
-<p>Here are nested tabs?</p>
-</div>
-</div>
-<div id="tab3" class="section level2">
-<h2>Tab3</h2>
-<p>Things3</p>
-<div id="fourth" class="section level3">
-<h3>fourth</h3>
-<p>Thing4</p>
-</div>
-</div>
-</div>
-<div id="section" class="section level1 unlisted unnumbered toc-ignore">
-<h1></h1>
-</div>
-<div id="no-more-tabs" class="section level1">
-<h1>No more tabs</h1>
+<div id="pcas" class="section level1">
+<h1>PCAs</h1>
+<p><details> <summary>Variances</summary> <div id="htmlwidget-b9d5f50ea3733654109a" style="width:672px;height:480px;" class="plotly html-widget"></div>
+<script type="application/json" data-for="htmlwidget-b9d5f50ea3733654109a">{"x":{"visdat":{"ae98401542ab":["function () ","plotlyVisDat"]},"cur_data":"ae98401542ab","attrs":{"ae98401542ab":{"x":["PC1","PC2","PC3","PC4","PC5","PC6","PC7","PC8","PC9","PC10"],"y":{},"alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"type":"bar"}},"layout":{"margin":{"b":40,"l":60,"t":25,"r":10},"xaxis":{"domain":[0,1],"automargin":true,"title":"Principal Component","type":"category","categoryorder":"array","categoryarray":["PC1","PC2","PC3","PC4","PC5","PC6","PC7","PC8","PC9","PC10"]},"yaxis":{"domain":[0,1],"automargin":true,"title":"Proportion of Variance"},"hovermode":"closest","showlegend":false},"source":"A","config":{"showSendToCloud":false},"data":[{"x":["PC1","PC2","PC3","PC4","PC5","PC6","PC7","PC8","PC9","PC10"],"y":[0.6808,0.0974,0.0616,0.0444,0.0199,0.0156,0.011,0.0088,0.0064,0.0057],"type":"bar","marker":{"color":"rgba(31,119,180,1)","line":{"color":"rgba(31,119,180,1)"}},"error_y":{"color":"rgba(31,119,180,1)"},"error_x":{"color":"rgba(31,119,180,1)"},"xaxis":"x","yaxis":"y","frame":null}],"highlight":{"on":"plotly_click","persistent":false,"dynamic":false,"selectize":false,"opacityDim":0.2,"selected":{"opacity":1},"debounce":0},"shinyEvents":["plotly_hover","plotly_click","plotly_selected","plotly_relayout","plotly_brushed","plotly_brushing","plotly_clickannotation","plotly_doubleclick","plotly_deselect","plotly_afterplot","plotly_sunburstclick"],"base_url":"https://plot.ly"},"evals":[],"jsHooks":[]}</script> </details></p>
 </div>
 
 
