split category PCA

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@ div.tocify {
 <h2>Tab1</h2>
 <p>Things 1</p>
 </div>
-<div id="tab2" class="section level2 tabset">
+<div id="tab2" class="section level2 tabset tabset-pills">
 <h2>Tab2</h2>
 <p>Things2</p>
 <div id="nested-tabs" class="section level3">
